--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fb9068">  <td>17/11/11 11:15:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithValidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@5c3bd550]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="fb9068">  <td>17/11/11 11:15:20</td>   <td>3574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@5c3bd550]">verifyLoginWithValidCredentails</td> 
-  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="fb9068">  <td>17/11/11 11:16:22</td>   <td>65850</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithValidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@5c3bd550]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
+<tr bgcolor="a7af78">  <td>17/11/12 11:41:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithValidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@d21a74c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1248234350</td>   <td></td> </tr>
+<tr bgcolor="a7af78">  <td>17/11/12 11:41:05</td>   <td>3475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@d21a74c]">verifyLoginWithValidCredentails</td> 
+  <td>main@1248234350</td>   <td></td> </tr>
+<tr bgcolor="a7af78">  <td>17/11/12 11:42:07</td>   <td>66283</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithValidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@d21a74c]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1248234350</td>   <td></td> </tr>
 </table>
