--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails" hash-for-method="verifyLoginWithInvalidCredentails">verifyLoginWithInvalidCredentails</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="verifyHomePageWomenButton">verifyHomePageWomenButton</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails</span>
+              <span class="class-name">com.framework.automation.framework.homePage.HomePageDisplayVerification</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoginWithInvalidCredentails">
-                  </a> <!-- verifyLoginWithInvalidCredentails -->
-                  <span class="method-name">verifyLoginWithInvalidCredentails</span>
+                  <a name="verifyHomePageWomenButton">
+                  </a> <!-- verifyHomePageWomenButton -->
+                  <span class="method-name">verifyHomePageWomenButton</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/xc/6sf0jwrj1kld9nykm9hs0zpm1hp1_p/T/testng-eclipse-1815972231/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/s5/6h7_tx2s1sg43_l74bh8hp280000gn/T/testng-eclipse-1616012985/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails&quot;/&gt;
+      &lt;class name=&quot;com.framework.automation.framework.homePage.HomePageDisplayVerification&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;verifyHomePageWomenButton&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.framework.automation.framework.homePage.HomePageDisplayVerification --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,9 +190,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoginWithInvalidCredentails')
-data.setCell(0, 2, 'com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails')
-data.setCell(0, 3, 1859);
+data.setCell(0, 1, 'verifyHomePageWomenButton')
+data.setCell(0, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
+data.setCell(0, 3, 1291);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -219,18 +223,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.framework.automation.framework.homePage.HomePageDisplayVerification</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verifyLoginWithInvalidCredentails</span>
-                <span class="method-start">4535 ms</span>
+                <span class="method-name">verifyHomePageWomenButton</span>
+                <span class="method-start">4987 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">end</span>
-                <span class="method-start">6396 ms</span>
+                <span class="method-start">6280 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
