--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96a48d">  <td>17/12/23 10:24:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.WomenDressButton()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@685cb137]">WomenDressButton</td> 
-  <td>main@485041780</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>17/12/23 10:24:25</td>   <td>1111</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@685cb137]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>17/12/23 10:24:20</td>   <td>-3363</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@685cb137]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>17/12/24 12:14:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.WomenDressButton()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@271053e1]">WomenDressButton</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>17/12/24 12:14:29</td>   <td>4297</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@271053e1]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>17/12/24 12:14:14</td>   <td>-10810</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@271053e1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>17/12/24 12:14:26</td>   <td>1092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.verifyContactPageHomeLogo()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@271053e1]">verifyContactPageHomeLogo</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>17/12/24 12:14:27</td>   <td>1724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.verifyMyAccountIndexPage()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@271053e1]">verifyMyAccountIndexPage</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>17/12/24 12:14:29</td>   <td>3364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.verifyT_shirtResult()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@271053e1]">verifyT_shirtResult</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
 </table>
