--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,6 +103,21 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="WomenDressButton">WomenDressButton</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="verifyContactPageHomeLogo">verifyContactPageHomeLogo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="verifyMyAccountIndexPage">verifyMyAccountIndexPage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="verifyT_shirtResult">verifyT_shirtResult</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,12 +145,33 @@
                   <span class="method-name">WomenDressButton</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyContactPageHomeLogo">
+                  </a> <!-- verifyContactPageHomeLogo -->
+                  <span class="method-name">verifyContactPageHomeLogo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyMyAccountIndexPage">
+                  </a> <!-- verifyMyAccountIndexPage -->
+                  <span class="method-name">verifyMyAccountIndexPage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyT_shirtResult">
+                  </a> <!-- verifyT_shirtResult -->
+                  <span class="method-name">verifyT_shirtResult</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/xc/6sf0jwrj1kld9nykm9hs0zpm1hp1_p/T/testng-eclipse--188429899/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/lf/c_3g4gyx4855vyqwww56pzg80000gn/T/testng-eclipse--781812110/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.framework.automation.framework.homePage.HomePageDisplayVerification&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;WomenDressButton&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.framework.automation.framework.homePage.HomePageDisplayVerification --&gt;
+      &lt;class name=&quot;com.framework.automation.framework.homePage.HomePageDisplayVerification&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,16 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'WomenDressButton')
+data.setCell(0, 1, 'verifyMyAccountIndexPage')
 data.setCell(0, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
-data.setCell(0, 3, 1110);
+data.setCell(0, 3, 1639);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'WomenDressButton')
+data.setCell(1, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
+data.setCell(1, 3, 1090);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyT_shirtResult')
+data.setCell(2, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
+data.setCell(2, 3, 931);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyContactPageHomeLogo')
+data.setCell(3, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
+data.setCell(3, 3, 631);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,16 +256,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.framework.automation.framework.homePage.HomePageDisplayVerification</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyContactPageHomeLogo</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -237,11 +274,23 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">WomenDressButton</span>
-                <span class="method-start">3366 ms</span>
+                <span class="method-start">10812 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyContactPageHomeLogo</span>
+                <span class="method-start">11904 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyMyAccountIndexPage</span>
+                <span class="method-start">12536 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyT_shirtResult</span>
+                <span class="method-start">14176 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">end</span>
-                <span class="method-start">4477 ms</span>
+                <span class="method-start">15109 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
