homepagetwitterlink and Verifyemaillink Test

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -19,9 +19,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>verifywomencategories</td>
-=======
+<td>Verifyemaillink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>VerifyPrintedDressSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -31,7 +32,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyInformationSpecialsTopSeller</td>
->>>>>>> origin/SearchTest
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -42,13 +42,14 @@
 <td>vrifybestSellersButtonInHomepgae</td>
 <td>&nbsp;</td></tr>
 <tr>
-<<<<<<< HEAD
-=======
+<td>&nbsp;</td>
+<td>homepagetwitterlink</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>&nbsp;</td>
 <td>VerifyToptSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
->>>>>>> origin/SearchTest
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
