--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,19 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="abef66">  <td>17/12/31 12:05:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@6d4b1c02]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>17/12/31 12:05:10</td>   <td>2749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.homepagetwitterlink()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@6d4b1c02]">homepagetwitterlink</td> 
-  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>17/12/31 12:05:10</td>   <td>2813</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@6d4b1c02]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-=======
-<tr bgcolor="756ead">  <td>17/12/31 11:18:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@59ec2012]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>17/12/31 11:18:43</td>   <td>3756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.FacebookLogo()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@59ec2012]">FacebookLogo</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>17/12/31 11:18:43</td>   <td>3817</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@59ec2012]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
->>>>>>> c11aa9a7cc2c5fd916a11ddb072c92788deaf6bd
+<tr bgcolor="a48474">  <td>18/01/06 18:17:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithValidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/06 18:17:40</td>   <td>5475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">verifyLoginWithValidCredentails</td> 
+  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/06 18:18:43</td>   <td>68423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">verifyLoginWithValidCredentails</td> 
+  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/06 18:19:43</td>   <td>129152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">verifyLoginWithValidCredentails</td> 
+  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/06 18:19:43</td>   <td>129154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">verifyLoginWithValidCredentails</td> 
+  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/06 18:19:43</td>   <td>129156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">verifyLoginWithValidCredentails</td> 
+  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/06 18:19:43</td>   <td>129158</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithValidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@146ba0ac]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
 </table>
