--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -23,6 +23,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>homePageYoutubeLogo</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>VerifyPrintedDressSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -35,11 +39,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyContactPageHomeLogo</td>
+<td>homePageYourLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>FacebookLogo</td>
+<td>verifyContactPageHomeLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -48,6 +52,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>VerifyToptSearch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>facebookLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
