--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="FacebookLogo">FacebookLogo</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" hash-for-method="homePageYoutubeLogo">homePageYoutubeLogo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="FacebookLogo">
-                  </a> <!-- FacebookLogo -->
-                  <span class="method-name">FacebookLogo</span>
+                  <a name="homePageYoutubeLogo">
+                  </a> <!-- homePageYoutubeLogo -->
+                  <span class="method-name">homePageYoutubeLogo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/lf/c_3g4gyx4855vyqwww56pzg80000gn/T/testng-eclipse-1546514815/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/lf/c_3g4gyx4855vyqwww56pzg80000gn/T/testng-eclipse-452327995/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.framework.automation.framework.homePage.HomePageDisplayVerification&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;FacebookLogo&quot;/&gt;
+          &lt;include name=&quot;homePageYoutubeLogo&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.framework.automation.framework.homePage.HomePageDisplayVerification --&gt;
     &lt;/classes&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'FacebookLogo')
+data.setCell(0, 1, 'homePageYoutubeLogo')
 data.setCell(0, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
-data.setCell(0, 3, 59);
+data.setCell(0, 3, 60);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 ms</span>
+              <span class="suite-total-time">Total running time: 60 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,7 +212,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">9 ignored methods</span>
+            <span class="header-content">11 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -224,6 +224,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">VerifyToptSearch</span>
                 <br/>
+                <span class="ignored-method-name">facebookLogo</span>
+                <br/>
                 <span class="ignored-method-name">verifyNewsLetterInvitation</span>
                 <br/>
                 <span class="ignored-method-name">WomenDressButton</span>
@@ -231,6 +233,8 @@ return data;
                 <span class="ignored-method-name">followUs</span>
                 <br/>
                 <span class="ignored-method-name">VerifyTShirtSearch</span>
+                <br/>
+                <span class="ignored-method-name">homePageYourLogo</span>
                 <br/>
                 <span class="ignored-method-name">VerifyPrintedDressSearch</span>
                 <br/>
@@ -252,12 +256,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">FacebookLogo</span>
-                <span class="method-start">3759 ms</span>
+                <span class="method-name">homePageYoutubeLogo</span>
+                <span class="method-start">4229 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">end</span>
-                <span class="method-start">3820 ms</span>
+                <span class="method-start">4291 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
