--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -2,10 +2,12 @@
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyContactPageHomeLogo</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.vrifybestSellersButtonInHomepgae</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyToptSearch</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.facebookLogo</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyNewsLetterInvitation</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.WomenDressButton</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.followUs</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyTShirtSearch</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.homePageYourLogo</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyPrintedDressSearch</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyInformationSpecialsTopSeller</td></tr>
 </table>
