--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,17 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.framework.automation.framework.homePage.VerifyloginWithValidCredentails.validEmailforCreateAccount</td></tr>
-<tr><td>com.framework.automation.framework.homePage.VerifyloginWithValidCredentails.vrifiedHomePageshoppingChartButtonDisplayed</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.vrifybestSellersButtonInHomepgae</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.facebookLogo</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyNewsLetterInvitation</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.homePageYoutubeLogo</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.WomenDressButton</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.Verifyemaillink</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyTShirtSearch</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyPrintedDressSearch</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyInformationSpecialsTopSeller</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyChiffonDress</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyContactPageHomeLogo</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyToptSearch</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.homepagetwitterlink</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyCart</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.homePageYourLogo</td></tr>
 </table>
