--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:56:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithValidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:56:14</td>   <td>3778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">verifyLoginWithValidCredentails</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:57:16</td>   <td>66260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">verifyLoginWithValidCredentails</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:58:17</td>   <td>126841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">verifyLoginWithValidCredentails</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:58:17</td>   <td>126846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">verifyLoginWithValidCredentails</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:58:17</td>   <td>126851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">verifyLoginWithValidCredentails</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>18/01/14 22:58:17</td>   <td>126854</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithValidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@6e1567f1]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1383547042</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/27 13:25:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@754ba872]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/27 13:25:05</td>   <td>2694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.Verifysunglass()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@754ba872]">Verifysunglass</td> 
+  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>18/01/27 13:25:06</td>   <td>3480</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@754ba872]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
 </table>
