--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>Verifywatch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>homePageYourLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -64,6 +68,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyInformationSpecialsTopSeller</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verifysearchjewelary</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
