--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.Verifywatch</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.vrifybestSellersButtonInHomepgae</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.facebookLogo</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.verifyNewsLetterInvitation</td></tr>
@@ -13,5 +14,6 @@
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyToptSearch</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.homepagetwitterlink</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.VerifyCart</td></tr>
+<tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.Verifysunglass</td></tr>
 <tr><td>com.framework.automation.framework.homePage.HomePageDisplayVerification.homePageYourLogo</td></tr>
 </table>
