--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9379b4">  <td>18/01/28 10:10:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.Verifysearchjewelary()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@2f54a33d]">Verifysearchjewelary</td> 
-  <td>main@81412691</td>   <td></td> </tr>
-<tr bgcolor="9379b4">  <td>18/01/28 10:10:25</td>   <td>954</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@2f54a33d]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
-<tr bgcolor="9379b4">  <td>18/01/28 10:10:21</td>   <td>-3113</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@2f54a33d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="bbe6bb">  <td>18/01/28 10:50:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithInvalidCredentails.VerifyProductring()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@27c20538]">VerifyProductring</td> 
+  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="bbe6bb">  <td>18/01/28 10:50:38</td>   <td>935</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithInvalidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@27c20538]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="bbe6bb">  <td>18/01/28 10:50:34</td>   <td>-2775</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithInvalidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@27c20538]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1522311648</td>   <td></td> </tr>
 </table>
