--- a/test-output/index.html
+++ b/test-output/index.html
@@ -29,15 +29,15 @@
     <div class="navigator-root">
       <div class="navigator-suite-header">
         <span>All suites</span>
-        <a href="#" title="Collapse/expand all the suites" class="collapse-all-link">
-          <img src="collapseall.gif" class="collapse-all-icon">
+        <a href="#" class="collapse-all-link" title="Collapse/expand all the suites">
+          <img class="collapse-all-icon" src="collapseall.gif">
           </img> <!-- collapse-all-icon -->
         </a> <!-- collapse-all-link -->
       </div> <!-- navigator-suite-header -->
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+            <a href="#" class="navigator-link" panel-name="suite-Default_suite">
               <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
                     <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="group-Default_suite">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="times-Default_suite">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="reporter-Default_suite">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-Default_suite">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="chronological-Default_suite">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -101,8 +101,8 @@
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.HomePageDisplayVerification" class="method navigator-link" hash-for-method="Verifysearchjewelary">Verifysearchjewelary</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails" hash-for-method="VerifyProductring">VerifyProductring</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.framework.automation.framework.homePage.HomePageDisplayVerification</span>
+              <span class="class-name">com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Verifysearchjewelary">
-                  </a> <!-- Verifysearchjewelary -->
-                  <span class="method-name">Verifysearchjewelary</span>
+                  <a name="VerifyProductring">
+                  </a> <!-- VerifyProductring -->
+                  <span class="method-name">VerifyProductring</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,20 +135,20 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/fp/dq93dpj51419pz_9wdhwpvx00000gn/T/testng-eclipse--6574416/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/lf/c_3g4gyx4855vyqwww56pzg80000gn/T/testng-eclipse-375544707/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
+  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.framework.automation.framework.homePage.HomePageDisplayVerification&quot;&gt;
+      &lt;class name=&quot;com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;Verifysearchjewelary&quot;/&gt;
+          &lt;include name=&quot;VerifyProductring&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.framework.automation.framework.homePage.HomePageDisplayVerification --&gt;
+      &lt;/class&gt; &lt;!-- com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Verifysearchjewelary')
-data.setCell(0, 2, 'com.framework.automation.framework.homePage.HomePageDisplayVerification')
-data.setCell(0, 3, 952);
+data.setCell(0, 1, 'VerifyProductring')
+data.setCell(0, 2, 'com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails')
+data.setCell(0, 3, 933);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 952 ms</span>
+              <span class="suite-total-time">Total running time: 933 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,45 +212,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">17 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.framework.automation.framework.homePage.HomePageDisplayVerification</span>
+              <span class="ignored-class-name">com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">Verifywatch</span>
-                <br/>
-                <span class="ignored-method-name">vrifybestSellersButtonInHomepgae</span>
-                <br/>
-                <span class="ignored-method-name">facebookLogo</span>
-                <br/>
-                <span class="ignored-method-name">verifyNewsLetterInvitation</span>
-                <br/>
-                <span class="ignored-method-name">homePageYoutubeLogo</span>
-                <br/>
-                <span class="ignored-method-name">WomenDressButton</span>
-                <br/>
-                <span class="ignored-method-name">Verifyemaillink</span>
-                <br/>
-                <span class="ignored-method-name">VerifyTShirtSearch</span>
-                <br/>
-                <span class="ignored-method-name">VerifyPrintedDressSearch</span>
-                <br/>
-                <span class="ignored-method-name">verifyInformationSpecialsTopSeller</span>
-                <br/>
-                <span class="ignored-method-name">VerifyChiffonDress</span>
-                <br/>
-                <span class="ignored-method-name">verifyContactPageHomeLogo</span>
-                <br/>
-                <span class="ignored-method-name">VerifyToptSearch</span>
-                <br/>
-                <span class="ignored-method-name">homepagetwitterlink</span>
-                <br/>
-                <span class="ignored-method-name">VerifyCart</span>
-                <br/>
-                <span class="ignored-method-name">Verifysunglass</span>
-                <br/>
-                <span class="ignored-method-name">homePageYourLogo</span>
+                <span class="ignored-method-name">verifyLoginWithInvalidCredentails</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -262,18 +230,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.framework.automation.framework.homePage.HomePageDisplayVerification</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">Verifysearchjewelary</span>
-                <span class="method-start">3117 ms</span>
+                <span class="method-name">VerifyProductring</span>
+                <span class="method-start">2778 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">end</span>
-                <span class="method-start">4071 ms</span>
+                <span class="method-start">3713 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
