--- a/test-output/old/Regression Suite/classes.html
+++ b/test-output/old/Regression Suite/classes.html
@@ -36,6 +36,18 @@
 <td>verifyLoginWithValidCredentails</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>verifyLoginWithValidCredentails</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>vrifiedHomePageshoppingChartButtonDisplayed</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validEmailforCreateAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
