--- a/test-output/old/Regression Suite/reporter-output.html
+++ b/test-output/old/Regression Suite/reporter-output.html
@@ -1,1 +1,18 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Test started running:verifyLoginWithInvalidCredentails</td></tr>
+<tr><td><a href='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/verifyLoginWithInvalidCredentails_24_02_2018_11_54_00.png'> <image src='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/verifyLoginWithInvalidCredentails_24_02_2018_11_54_00.png' height='100' width='100'/> </a></td></tr>
+<tr><td>Test started running:validEmailforCreateAccount</td></tr>
+<tr><td><a href='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/screenshot/validEmailforCreateAccount__24_02_2018_11_54_14.png'> <image src='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/screenshot/validEmailforCreateAccount__24_02_2018_11_54_14.png' height='100' width='100'/> </a></td></tr>
+<tr><td><a href='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/validEmailforCreateAccount_24_02_2018_11_54_15.png'> <image src='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/validEmailforCreateAccount_24_02_2018_11_54_15.png' height='100' width='100'/> </a></td></tr>
+<tr><td>Test started running:verifyLoginWithValidCredentails</td></tr>
+<tr><td><a href='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/verifyLoginWithValidCredentails_24_02_2018_11_55_19.png'> <image src='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/verifyLoginWithValidCredentails_24_02_2018_11_55_19.png' height='100' width='100'/> </a></td></tr>
+<tr><td>Test started running:verifyLoginWithValidCredentails</td></tr>
+<tr><td><a href='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/failure_screenshots/verifyLoginWithValidCredentails_24_02_2018_11_56_21.png'> <image src='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/failure_screenshots/verifyLoginWithValidCredentails_24_02_2018_11_56_21.png' height='100' width='100'/> </a></td></tr>
+<tr><td>Test started running:verifyLoginWithValidCredentails</td></tr>
+<tr><td>Test skipped :verifyLoginWithValidCredentails</td></tr>
+<tr><td>Test started running:verifyLoginWithValidCredentails</td></tr>
+<tr><td>Test skipped :verifyLoginWithValidCredentails</td></tr>
+<tr><td>Test started running:verifyLoginWithValidCredentails</td></tr>
+<tr><td>Test skipped :verifyLoginWithValidCredentails</td></tr>
+<tr><td>Test started running:vrifiedHomePageshoppingChartButtonDisplayed</td></tr>
+<tr><td><a href='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/vrifiedHomePageshoppingChartButtonDisplayed_24_02_2018_11_56_22.png'> <image src='/Users/nadiruzzaman.muhamm/Documents/CloudProject/AutomationFramework/src/main/java/com/AutomationFramework/test/success_screenshots/vrifiedHomePageshoppingChartButtonDisplayed_24_02_2018_11_56_22.png' height='100' width='100'/> </a></td></tr>
+</table>
