--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a48474">  <td>18/01/27 13:25:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.Verifysunglass()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@754ba872]">Verifysunglass</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/01/27 13:25:06</td>   <td>786</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@754ba872]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>18/01/27 13:25:02</td>   <td>-2694</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@754ba872]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>18/02/23 16:23:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageDisplayVerification.VerifyFaded_T_shirt()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@204f30ec]">VerifyFaded_T_shirt</td> 
+  <td>main@1458540918</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>18/02/23 16:24:09</td>   <td>61804</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageDisplayVerification.end()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@204f30ec]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1458540918</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>18/02/23 16:23:05</td>   <td>-2831</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageDisplayVerification.setup()[pri:0, instance:com.framework.automation.framework.homePage.HomePageDisplayVerification@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1458540918</td>   <td></td> </tr>
 </table>
