--- a/test-output/old/Regression Suite/methods-alphabetical.html
+++ b/test-output/old/Regression Suite/methods-alphabetical.html
@@ -1,12 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fb9068">  <td>17/11/11 20:45:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithInvalidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@5c3bd550]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>17/11/11 20:46:01</td>   <td>45884</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithValidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@239963d8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="fb9068">  <td>17/11/11 20:46:00</td>   <td>45563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithInvalidCredentails.verifyLoginWithInvalidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@5c3bd550]">verifyLoginWithInvalidCredentails</td> 
-  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>17/11/11 20:46:46</td>   <td>91022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@239963d8]">verifyLoginWithValidCredentails</td> 
-  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>18/02/24 23:54:01</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithInvalidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@6eebc39e]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:56:22</td>   <td>141145</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyloginWithValidCredentails.end()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>18/02/24 23:53:46</td>   <td>-14880</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithInvalidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@6eebc39e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:54:01</td>   <td>121</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyloginWithValidCredentails.setup()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:54:03</td>   <td>2000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.validEmailforCreateAccount()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">validEmailforCreateAccount</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>18/02/24 23:53:48</td>   <td>-12570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithInvalidCredentails.verifyLoginWithInvalidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails@6eebc39e]">verifyLoginWithInvalidCredentails</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:54:15</td>   <td>14472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">verifyLoginWithValidCredentails</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:55:20</td>   <td>79395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">verifyLoginWithValidCredentails</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:56:22</td>   <td>140716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">verifyLoginWithValidCredentails</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:56:22</td>   <td>140718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">verifyLoginWithValidCredentails</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:56:22</td>   <td>140719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.verifyLoginWithValidCredentails(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">verifyLoginWithValidCredentails</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/02/24 23:56:22</td>   <td>140720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyloginWithValidCredentails.vrifiedHomePageshoppingChartButtonDisplayed()[pri:0, instance:com.framework.automation.framework.homePage.VerifyloginWithValidCredentails@490ab905]">vrifiedHomePageshoppingChartButtonDisplayed</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
 </table>
