--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.framework.automation.framework.homePage.VerifyloginWithInvalidCredentails</td>
+<td>com.framework.automation.framework.homePage.Headlesstest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -21,6 +21,10 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeTest</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
@@ -29,4 +33,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterTest</td>
+<td>&nbsp;</td></tr>
 </table>
